# gocycling-controller

./: .gitmodules  CMakeLists.txt  Cargo.toml  bcm2835.json  build.rs  build.sh  gen_bindings.sh  memory.x
.cargo/: config.toml
pico-binding/: CMakeLists.txt  pico_inline.c  pico_inline.cpp  wrapper.h  wrapper.hpp
src/: binding.rs  critical.rs  ctypes.rs  cycling.rs  host.rs  interrupt.rs  lib.rs  main.rs  offline.rs  rgb.rs  state.rs  uf2.rs  update.rs
src/binding/: impls.rs  mod.rs
