[package]
name = "gocycling-controller"
version = "0.1.0"
authors = ["Pjottos <35270305+Pjottos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-boot2 = "0.1"
rp2040-hal = { path = "rp-hal/rp2040-hal"}
cortex-m-rt = "0.6"

embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-time = "0.10"


panic-halt = "0.2"


[profile.release]
codegen-units = 1
lto = true
