[package]
name = "rust-controller"
version = "0.1.0"
authors = ["Pjottos <35270305+Pjottos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]


[dependencies]


[build-dependencies]
bindgen = "0.58"


[profile.release]
codegen-units = 1
lto = true
